Fix 2D canvas entiring invalid state when painted during hibernation

painting a canvas while the canvas is in a hibernation state was causing
the canvas to allocate a non-accelerated surface backing, which would
later cause GPU texture preparation to fail after exiting from hibernation.
This fix prevents "Canvas2DLayerBridge::newImageSnapshot()" from triggering
the creation of a surface whil the canvas is in a hibernating state.

BUG=613513

Review-Url: https://codereview.chromium.org/2051513002
Cr-Commit-Position: refs/heads/master@{#398681}

Former-commit-id: 6cfd221afcf593c701f2fce3ffbebdb4b2201968